# TwinSync-Audio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  device_compatibility_report.md  feature_request.md
backend/: run_backend.py
backend/twinsync_backend/: __init__.py  audio_engine.py  calibration.py  database.py  delay.py  device_manager.py  ipc_server.py  logging_config.py  models.py  service.py
docs/: ARCHITECTURE.md  BUILD_WINDOWS.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  HARDWARE_TEST_CHECKLIST.md  RELEASE_PROCESS.md  UI_PERFORMANCE_REPORT.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  useDisplayPerformance.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/windows/: installer-hooks.nsh
installer/: build_windows.ps1
tests/: test_audio_engine.py  test_calibration.py  test_database.py  test_delay.py  test_service.py
