[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twinsync-audio"
version = "0.2.0"
description = "Local Windows dual-speaker audio synchronization backend for TwinSync Audio."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
windows = [
  "numpy==2.5.1",
  "soundcard==0.4.6",
  "pyinstaller==6.21.0"
]

[project.scripts]
twinsync-backend = "twinsync_backend.ipc_server:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
