[package]
name = "twinsync-audio"
version = "0.1.0"
description = "TwinSync Audio desktop shell"
authors = ["TwinSync Audio"]
license = "Proprietary"
edition = "2021"

[lib]
name = "twinsync_audio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

